package com.simulator.bike.enumeration;

public enum Command {
    PLACE,
    FORWARD,
    TURN_LEFT,
    TURN_RIGHT,
    GPS_REPORT,
    USAGE,
    help,
    EXIT
}
